import 'package:waultar/core/models/media/media_model.dart';
import 'package:waultar/core/models/misc/person_model.dart';
import 'package:waultar/core/models/misc/reaction_model.dart';
import 'package:waultar/core/models/profile/profile_model.dart';

import '../base_model.dart';
import 'group_model.dart';

class CommentModel extends BaseModel {
  final PersonModel commenter;
  final String text;
  final DateTime tiemstamp;
  final List<MediaModel>? media;
  final GroupModel? group;
  final ReactionModel reaction;

  CommentModel(int id, ProfileModel profile, String raw, this.commenter, this.text, this.tiemstamp, this.media, this.group, this.reaction) : super(id, profile, raw);
}