class ActivityModel {
  final int id;
  final DateTime timestamp;
  final String raw;

  ActivityModel(this.id, this.timestamp, this.raw);
}