class CoordinateModel {
  int id = 0;
  double longitude;
  double latitude;

  CoordinateModel(this.id, this.longitude, this.latitude);
}